--- a/app/dashboard/template.hbs
+++ b/app/dashboard/template.hbs
@@ -1,2 +1,30 @@
 {{page-title "Dashboard"}}
+<div class='min-h-screen w-screen bg-gradient-to-tr from-red-300 to-blue-400 flex justify-center items-center font-poppins text-black text-lg lg:text-2xl'>
+    <div class="flex flex-col lg:grid lg:grid-cols-3 lg:grid-rows-4 gap-5">
+        <div class="lg:row-start-1 lg:row-end-5 grid-element flex flex-col items-center gap-y-5">
+            <p class="font-medium">Najdrożej sprzedany samochód</p>
+            <div class="w-full h-full flex flex-col justify-center">
+                <img class="rounded-lg overflow-hidden max-h-96 lg:max-h-[500px] w-full object-cover" src="https://images.cdn.circlesix.co/image/1/700/0/uploads/posts/2019/03/f2988d5d8adbb026a7b0326d04ba0b4f.jpg" alt="mazda miata">
+                <div class="text-base flex justify-between lg:text-lg mt-5">
+                    <p>Mazda Miata</p>
+                    <p>$27,300</p>
+                </div>
+            </div>
+        </div>
+        <div class="lg:col-start-2 lg:col-end-5 grid-element flex justify-between items-center">
+            <p class="font-medium">Ilość otwartych aukcji</p>
+            <span class="px-4 py-2 rounded-lg bg-gradient-to-tr from-red-300 to-blue-400 text-white text-base lg:text-lg lg:px-10">19</span>
+        </div>
+        <div class="lg:col-start-2 lg:col-end-5 lg:row-start-2 lg:row-end-4 grid-element">
+            <p class="font-medium">Wykres zakończonych aukcji</p>
+        </div>
+        <div class="lg:col-start-2 lg:col-end-5 grid-element text-base">
+            <p class="text-lg lg:text-2xl font-medium mb-5">Ostatnia zakończona aukcja</p>
+            <p>Data zakończenia: 30-06-2022</p>
+            <p>Marka: Ford</p>
+            <p>Model: Mustang GT</p>
+            <p>Cena końcowa: $25,000</p>
+        </div>
+    </div>
+</div>
 {{outlet}}
