--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,2 +1,36 @@
 {{page-title "Login"}}
+<div
+  class='min-h-screen w-screen bg-gradient-to-tr from-red-300 to-blue-400 flex justify-center items-center font-poppins text-black'
+>
+  <form
+    class='flex flex-col gap-y-5 bg-white p-10 rounded-lg lg:min-w-[350px] lg:gap-y-7'
+    action=''
+    autocomplete='off'
+    {{on 'submit' this.onSubmit}}
+  >
+    <h2 class='w-full text-center mb-5 font-semibold text-xl'>Zaloguj się</h2>
+    <section class='flex flex-col'>
+      <label for='email'>Email:</label>
+      <input
+        class='bg-blue-200 rounded-md px-1'
+        type='text'
+        id='email'
+        {{on 'input' this.onNicknameChange}}
+      />
+    </section>
+    <section class='flex flex-col'>
+      <label for='password'>Hasło:</label>
+      <input
+        class='bg-blue-200 rounded-md px-1'
+        type='password'
+        id='password'
+        {{on 'input' this.onPasswordChange}}
+      />
+    </section>
+    <button
+      class='bg-blue-400 text-white py-1 rounded-lg mt-7'
+      type='submit'
+    >Zaloguj</button>
+  </form>
+</div>
 {{outlet}}
