fix: login template and register logic

--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -10,11 +10,11 @@
   >
     <h2 class='w-full text-center mb-5 font-semibold text-xl'>Zaloguj się</h2>
     <section class='flex flex-col'>
-      <label for='email'>Email:</label>
+      <label for='nickname'>Nickname:</label>
       <input
         class='bg-blue-200 rounded-md px-1'
         type='text'
-        id='email'
+        id='nickname'
         {{on 'input' this.onNicknameChange}}
       />
     </section>
