--- a/app/offers/template.hbs
+++ b/app/offers/template.hbs
@@ -97,9 +97,16 @@
   </form>
   {{#each this.model as |offer|}}
     <LinkTo @route="offer.show" @model={{offer}}>
-        <div class="bg-white w-[85vw] rounded-lg px-7 py-3 flex justify-between">
-            <p class="text-lg">{{offer.brand}} {{offer.model}}, {{offer.yearOfProduction}}</p>
-            <p class="text-lg">${{offer.price}}</p>
+        <div class="bg-white w-[85vw] rounded-lg px-7 py-3 flex flex-col justify-center">
+            <div class="flex justify-between">
+              <p class="text-lg">{{offer.brand}} {{offer.model}}, {{offer.yearOfProduction}}</p>
+              <p class="text-lg">${{offer.price}}</p>
+            </div>
+            <div class="text-sm">
+              <p>Stan: {{offer.condition}}</p>
+              <p>Silnik: {{offer.engine}}</p>
+              <p class="overflow-hidden">Opis: {{offer.description}}</p>
+            </div>
         </div>
     </LinkTo>
   {{/each}}
