add header component

--- a/app/offers/template.hbs
+++ b/app/offers/template.hbs
@@ -1,6 +1,7 @@
 {{page-title 'Offers'}}
+<Header />
 <div
-  class='min-h-screen w-screen bg-gradient-to-tr from-red-300 to-blue-400 flex flex-col justify-center items-center font-poppins gap-y-5'
+  class='py-7 min-h-screen bg-gradient-to-tr from-red-300 to-blue-400 flex flex-col justify-center items-center font-poppins gap-y-5'
 >
   <form
     class='flex flex-col gap-y-5 bg-white p-10 rounded-lg lg:min-w-[350px] lg:gap-y-7'
