--- a/app/dashboard/template.hbs
+++ b/app/dashboard/template.hbs
@@ -1,5 +1,6 @@
 {{page-title "Dashboard"}}
-<div class='min-h-screen w-screen bg-gradient-to-tr from-red-300 to-blue-400 flex justify-center items-center font-poppins text-black text-lg lg:text-2xl'>
+<Header />
+<div class='py-7 min-h-screen bg-gradient-to-tr from-red-300 to-blue-400 flex justify-center items-center font-poppins text-black text-lg lg:text-2xl'>
     <div class="flex flex-col lg:grid lg:grid-cols-3 lg:grid-rows-4 gap-5">
         <div class="lg:row-start-1 lg:row-end-5 grid-element flex flex-col items-center gap-y-5">
             <p class="font-medium">Najdrożej sprzedany samochód</p>
