add footer component

--- a/app/register/template.hbs
+++ b/app/register/template.hbs
@@ -1,6 +1,7 @@
 {{page-title 'Register'}}
+<Header />
 <div
-  class='min-h-screen w-screen bg-gradient-to-tr from-red-300 to-blue-400 flex justify-center items-center font-poppins text-black'
+  class='min-h-screen bg-gradient-to-tr from-red-300 to-blue-400 flex justify-center items-center font-poppins text-black'
 >
   <form
     class='flex flex-col gap-y-5 bg-white p-10 rounded-lg lg:min-w-[350px] lg:gap-y-7'
@@ -69,4 +70,5 @@
     >Zarejestruj</button>
   </form>
 </div>
+<Footer />
 {{outlet}}
