change text color

--- a/app/components/header/template.hbs
+++ b/app/components/header/template.hbs
@@ -8,7 +8,7 @@
         {{#if this.shouldDisplayButtons}}
         <LinkTo @route="settings">Settings</LinkTo>
         {{else}}
-            <button class="bg-blue-400 rounded-lg px-4 py-2" type="button">Zaloguj</button>
+            <button class="bg-blue-400 rounded-lg px-4 py-2 text-white" type="button">Zaloguj</button>
             <button class="bg-gradient-to-tr from-red-300 to-blue-400 text-white rounded-lg px-4 py-2" type="button">Zarejestruj</button>
         {{/if}}
     </div>
