--- a/app/offer/show/template.hbs
+++ b/app/offer/show/template.hbs
@@ -32,6 +32,7 @@
       <button
         class='bg-blue-400 mt-7 py-2 px-4 text-white rounded-lg'
         type='button'
+        {{on 'click' this.onBuyNow}}
       >Kup teraz</button>
     {{/if}}
   </div>
