--- a/app/register/template.hbs
+++ b/app/register/template.hbs
@@ -4,7 +4,7 @@
   class='min-h-screen bg-gradient-to-tr from-red-300 to-blue-400 flex justify-center items-center font-poppins text-black'
 >
   <form
-    class='flex flex-col gap-y-5 bg-white p-10 rounded-lg lg:min-w-[350px] lg:gap-y-7'
+    class='my-10 flex flex-col gap-y-5 bg-white p-10 rounded-lg lg:min-w-[350px] lg:gap-y-7'
     action=''
     autocomplete='off'
     {{on 'submit' this.onSubmit}}
