--- a/app/offer/show/template.hbs
+++ b/app/offer/show/template.hbs
@@ -7,6 +7,7 @@
     <div
       class='py-7 px-10 bg-white rounded-lg w-4/5 min-w-[300px] max-w-[1000px]'
     >
+      <img src={{this.model.photoUrl}} alt={{this.model.brand}} class="mb-10 aspect-video">
       <p class='text-xl font-semibold mb-5'>{{this.model.brand}}
         {{this.model.model}}</p>
       <p>Autor aukcji: {{this.model.owner.name}} {{this.model.owner.surname}}</p>
